--- a/index.htm
+++ b/index.htm
@@ -372,9 +372,9 @@
                </div>
             </div>
 
-            <div class="container mx-auto flex items-center justify-between gap-6 p-6 bg-[#0d1117] rounded-lg border border-transparent shadow-sm">
+            <div class="container mx-auto px-3 flex items-center justify-between gap-6 p-6 bg-[#0d1117] rounded-lg border border-transparent shadow-sm">
                <!-- Sol: Dotted Icon Alanı -->
-               <div class="w-3 h-full border-l-4 border-dotted border-[#2b3137]"></div>
+               <div class="w-3 h-full border-l-4 border-dotted border-white"></div>
 
                <!-- Orta: Metin Alanı -->
                <div class="flex flex-col">
