--- a/index.htm
+++ b/index.htm
@@ -372,7 +372,8 @@
                </div>
             </div>
 
-            <div class="container mx-auto px-3 flex items-center justify-between gap-6 p-6 bg-[#0d1117] rounded-lg border border-transparent shadow-sm">
+            <div class="mx-3">
+				<div class="container mx-auto x-3 flex items-center justify-between gap-6 p-6 bg-[#0d1117] rounded-lg border border-transparent shadow-sm">
                <!-- Sol: Dotted Icon Alanı -->
                <div class="w-3 h-full border-l-4 border-dotted border-white"></div>
 
@@ -385,6 +386,7 @@
                <!-- Sağ: Ok Simgesi -->
                <div class="text-sky-400 text-2xl">➜</div>
             </div>
+			</div>
          </section>
       </main>
 
