--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="src/input.css" />
       <link rel="stylesheet" href="src/output.css" />
       <link rel="stylesheet" href="src/style.css" />
+      <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
       <title>Vionix Academy</title>
