--- a/index.htm
+++ b/index.htm
@@ -261,8 +261,8 @@
             </div>
 
             <div class="container mx-auto py-10 md:pt-32">
-               <pre class="text-center px-2 text-xl text-white/90 mb-5">Our learners work at</pre>
-               <div class="w-full flex flex-wrap gap-10 lg:gap-16 justify-center items-center">
+               <pre class="text-center text-xl text-white/90 mb-5">Our learners work at</pre>
+               <div class="w-full px-4 flex flex-wrap gap-10 lg:gap-16 justify-center items-center">
                   <img src="./img/Apple simple white logo.svg" alt="brand" />
                   <img src="./img/EA simple white logo.svg" alt="brand" />
                   <img src="./img/Google simple white logo.svg" alt="brand" />
