--- a/index.htm
+++ b/index.htm
@@ -349,8 +349,8 @@
                      </div>
                      <div>
                         <button
-                        style="background: #611080;
-                        background: linear-gradient(92deg, rgba(97, 16, 128, 1) 44%, rgba(208, 11, 132, 1) 100%);"
+                        style="background: #3C205E;
+                        background: linear-gradient(92deg, rgba(60, 32, 94, 1) 30%, rgba(208, 11, 132, 1) 100%);"
                          class="text-white w-full font-bold px-4 m:px-6 py-3 rounded-xl cursor-pointer whitespace-nowrap">İndi Müraciət et</button>
                      </div>
                   </div>
