--- a/index.htm
+++ b/index.htm
@@ -263,7 +263,7 @@
                   <!-- Left side: Sign up buttons -->
                   <div class="w-full md:w-[40%] flex flex-col items-center md:items-start">
                      <!-- OR Divider -->
-                     <div class="relative flex items-center w-full my-2">
+                     <!-- <div class="relative flex items-center w-full my-2">
                         <svg fill="currentColor" role="img" aria-hidden="true" class="gamut-1wy7cd4 e3tf18d0 h-1">
                            <title>Checker Dense</title>
                            <pattern id="CheckerDense-pattern-:R1qjalada39ld9l6:" x="0" y="0" width="4" height="4" patternUnits="userSpaceOnUse">
@@ -272,7 +272,7 @@
                            </pattern>
                            <rect width="100%" height="100%" fill="url(#CheckerDense-pattern-:R1qjalada39ld9l6:)"></rect>
                         </svg>
-                     </div>
+                     </div> -->
 
                      <!-- More ways button -->
                      <button class="w-full bg-[#7a074e] text-white hover:bg-white hover:text-[#7a074e] hover:border-[#cf0884] hover:border transition-all duration-[.3s] cursor-pointer font-semibold py-3 px-6 rounded-lg">Müraciət et</button>
@@ -300,21 +300,18 @@
                </div>
             </div>
 
-            <div class="mx-3">
+            <!-- <div class="mx-3">
                <div class="container mx-auto x-3 flex items-center justify-between gap-6 p-6 bg-[#5c5e76] rounded-lg border border-transparent shadow-sm">
-                  <!-- Sol: Dotted Icon Alanı -->
                   <div class="w-3 h-full border-l-4 border-dotted border-white"></div>
 
-                  <!-- Orta: Metin Alanı -->
                   <div class="flex flex-col">
                      <h3 class="text-[#7a074e] font-bold font-mono text-[20px]">» Transform your team with Codecademy Teams training</h3>
                      <p class="text-white text-sm mt-1">Help everyone on your team build job-ready skills with a plan that offers flexible content assignment, progress tracking, and more.</p>
                   </div>
 
-                  <!-- Sağ: Ok Simgesi -->
                   <div class="text-[#7a074e] text-2xl">➜</div>
                </div>
-            </div>
+            </div> -->
          </section>
          <section id="akademiya" class="py-[30px] bg-[#eee]">
             <div class="container mx-auto px-4">
